unpackaged/main/default/objects/Update_User__e/Update_User__e.object-meta.xml
<CustomObject>
    <label>Update User</label>
    <pluralLabel>Update Users</pluralLabel>
</CustomObject>