unpackaged/main/default/objects/Update_User__e/fields/Employee_Id_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id_Payroll__c</fullName>
    <label>Employee Id (Payroll)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>