unpackaged/main/default/objects/Update_User__e/fields/ManagerId__c.field-meta.xml
<CustomField>
    <fullName>ManagerId__c</fullName>
    <label>Manager ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>