unpackaged/main/default/objects/Update_User__e/fields/Slack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_ID__c</fullName>
    <label>Slack User ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>