unpackaged/main/default/objects/Update_User__e/fields/TimeZoneSID__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSID__c</fullName>
    <label>TimeZoneSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>