unpackaged/main/default/objects/Update_User__e/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <label>UserRoleId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>